Add lectionarium links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>scholadomi</h1>
     <ul>
       <li><a href="spellgame">spellgame - A spelling game</a>
+      <li><a href="lectionarium/bible">The Sacred Scriptures (Clementine Vulgate Text)</a>
+      <li><a href="lectionarium/lectionary">The Lectionary for Mass (Clementine Vulgate Text)</a>
     </ul>
   </body>
 </html>
